--- a/interpolation_stationlist/README
+++ b/interpolation_stationlist/README
@@ -1,4 +1,5 @@
 The "interpolation_stationlist" data are intended for use by pipelines that perform interpolations such as ADDA. 
 These lists may be shorter than those found in the "full_stationlist" and may, conceivably, be slightly different lists.
 Conversely, some lists may be the same as its counterpart in the "interpolation_stationlist" data set.
-The HSOFS and EC95D grids currently have land and water control nodes included. The remaining grids are TBD.
+The HSOFS, EC95D, Region3 grids currently have land and water control nodes included. The remaining grids are TBD.
+These are the new control points which will never be KNN optimized and and intended for use with the new LinearRBF methods
